--- a/ElearningDesktop.csproj
+++ b/ElearningDesktop.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Colors.cs" />
+    <Compile Include="Styles.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
