--- a/ElearningDesktop.csproj
+++ b/ElearningDesktop.csproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <Compile Include="ApiResponse.cs" />
     <Compile Include="ApiService.cs" />
+    <Compile Include="Count.cs" />
     <Compile Include="Series.cs" />
     <Compile Include="Styles.cs" />
     <Compile Include="Form1.cs">
@@ -152,6 +153,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="obj\Debug\plus.png" />
     <Content Include="Quicksand-Regular.ttf" />
     <Content Include="Righteous-Regular.ttf" />
   </ItemGroup>
