--- a/ElearningDesktop.csproj
+++ b/ElearningDesktop.csproj
@@ -85,6 +85,7 @@
     <Compile Include="ApiResponse.cs" />
     <Compile Include="ApiService.cs" />
     <Compile Include="Count.cs" />
+    <Compile Include="Routes.cs" />
     <Compile Include="Series.cs" />
     <Compile Include="Styles.cs" />
     <Compile Include="Form1.cs">
