--- a/ElearningDesktop.csproj
+++ b/ElearningDesktop.csproj
@@ -160,6 +160,8 @@
     <None Include="obj\Debug\plus.png" />
     <None Include="obj\Debug\Group 21.png" />
     <None Include="obj\Debug\Rectangle 247.png" />
+    <None Include="obj\Debug\Vector.png" />
+    <None Include="obj\Debug\seta.png" />
     <Content Include="Quicksand-Regular.ttf" />
     <Content Include="Righteous-Regular.ttf" />
   </ItemGroup>
