--- a/ElearningDesktop.csproj
+++ b/ElearningDesktop.csproj
@@ -203,6 +203,9 @@
     <PackageReference Include="Refit">
       <Version>6.0.38</Version>
     </PackageReference>
+    <PackageReference Include="Refit.Newtonsoft.Json">
+      <Version>6.0.38</Version>
+    </PackageReference>
     <PackageReference Include="System.Runtime">
       <Version>4.3.1</Version>
     </PackageReference>
