--- a/ElearningDesktop.csproj
+++ b/ElearningDesktop.csproj
@@ -165,6 +165,7 @@
     <None Include="obj\Debug\seta.png" />
     <None Include="obj\Debug\525px-X_mark.svg.png" />
     <None Include="obj\Debug\x.png" />
+    <None Include="obj\Debug\upload.png" />
     <Content Include="Quicksand-Regular.ttf" />
     <Content Include="Righteous-Regular.ttf" />
   </ItemGroup>
