Testando e aprimorando o projeto
Co-Authored-By: Amazing512 <60967298+Amazing512@users.noreply.github.com>

--- a/ElearningDesktop.csproj
+++ b/ElearningDesktop.csproj
@@ -168,6 +168,8 @@
     <None Include="obj\Debug\x.png" />
     <None Include="obj\Debug\upload.png" />
     <None Include="obj\Debug\user.png" />
+    <None Include="obj\tcc-logo-white.png" />
+    <None Include="obj\ttc-logo-black.png" />
     <Content Include="Quicksand-Regular.ttf" />
     <Content Include="Righteous-Regular.ttf" />
   </ItemGroup>
