--- a/ElearningDesktop.csproj
+++ b/ElearningDesktop.csproj
@@ -25,7 +25,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>3</ApplicationRevision>
+    <ApplicationRevision>4</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -171,134 +171,9 @@
     <None Include="obj\Debug\user.png" />
     <None Include="obj\tcc-logo-white.png" />
     <None Include="obj\ttc-logo-black.png" />
-    <None Include="Icons\accessible-icon-brands.png" />
-    <None Include="Icons\allergies-solid.png" />
-    <None Include="Icons\american-sign-language-interpreting-solid.png" />
-    <None Include="Icons\android-brands.png" />
-    <None Include="Icons\apple-alt-solid.png" />
-    <None Include="Icons\baby-solid.png" />
-    <None Include="Icons\bacteria-solid.png" />
-    <None Include="Icons\balance-scale-solid.png" />
-    <None Include="Icons\band-aid-solid.png" />
-    <None Include="Icons\basketball-ball-solid.png" />
-    <None Include="Icons\bed-solid.png" />
-    <None Include="Icons\bible-solid.png" />
-    <None Include="Icons\bitcoin-brands.png" />
-    <None Include="Icons\bone-solid.png" />
-    <None Include="Icons\book-medical-solid.png" />
-    <None Include="Icons\braille-solid.png" />
-    <None Include="Icons\brain-solid.png" />
-    <None Include="Icons\briefcase-solid.png" />
-    <None Include="Icons\bug-solid.png" />
-    <None Include="Icons\building-regular.png" />
-    <None Include="Icons\calendar-alt-regular.png" />
-    <None Include="Icons\camera-solid %282%29.png" />
-    <None Include="Icons\candy-cane-solid.png" />
-    <None Include="Icons\capsules-solid.png" />
-    <None Include="Icons\carrot-solid.png" />
-    <None Include="Icons\car-solid.png" />
-    <None Include="Icons\chalkboard-teacher-solid.png" />
-    <None Include="Icons\chart-bar-regular.png" />
-    <None Include="Icons\chess-solid.png" />
-    <None Include="Icons\child-solid.png" />
-    <None Include="Icons\city-solid.png" />
-    <None Include="Icons\clipboard-regular.png" />
-    <None Include="Icons\cloud-sun-rain-solid.png" />
-    <None Include="Icons\code-solid.png" />
-    <None Include="Icons\crutch-solid.png" />
-    <None Include="Icons\database-solid.png" />
-    <None Include="Icons\desktop-solid.png" />
-    <None Include="Icons\disease-solid.png" />
-    <None Include="Icons\divide-solid.png" />
-    <None Include="Icons\dna-solid.png" />
-    <None Include="Icons\dog-solid.png" />
-    <None Include="Icons\dollar-sign-solid.png" />
-    <None Include="Icons\dove-solid.png" />
-    <None Include="Icons\drafting-compass-solid.png" />
-    <None Include="Icons\drum-solid.png" />
-    <None Include="Icons\drumstick-bite-solid.png" />
-    <None Include="Icons\envira-brands.png" />
-    <None Include="Icons\eye-regular.png" />
-    <None Include="Icons\fan-solid.png" />
-    <None Include="Icons\file-alt-regular.png" />
-    <None Include="Icons\film-solid.png" />
-    <None Include="Icons\fire-alt-solid.png" />
-    <None Include="Icons\fire-extinguisher-solid.png" />
-    <None Include="Icons\first-aid-solid.png" />
-    <None Include="Icons\fish-solid.png" />
-    <None Include="Icons\flask-solid.png" />
-    <None Include="Icons\frog-solid.png" />
-    <None Include="Icons\gamepad-solid.png" />
-    <None Include="Icons\gem-regular.png" />
-    <None Include="Icons\globe-americas-solid.png" />
-    <None Include="Icons\globe-solid.png" />
-    <None Include="Icons\guitar-solid.png" />
-    <None Include="Icons\hammer-solid.png" />
-    <None Include="Icons\hard-hat-solid.png" />
-    <None Include="Icons\hdd-regular.png" />
-    <None Include="Icons\headphones-alt-solid.png" />
-    <None Include="Icons\head-side-mask-solid.png" />
-    <None Include="Icons\helicopter-solid.png" />
-    <None Include="Icons\hospital-regular.png" />
-    <None Include="Icons\image-regular %281%29.png" />
-    <None Include="Icons\industry-solid.png" />
-    <None Include="Icons\keyboard-regular.png" />
-    <None Include="Icons\laptop-code-solid.png" />
-    <None Include="Icons\laptop-solid.png" />
-    <None Include="Icons\leaf-solid.png" />
-    <None Include="Icons\lightbulb-regular.png" />
-    <None Include="Icons\lungs-solid.png" />
-    <None Include="Icons\map-regular.png" />
-    <None Include="Icons\map-signs-solid.png" />
-    <None Include="Icons\microchip-solid.png" />
-    <None Include="Icons\microphone-alt-solid.png" />
-    <None Include="Icons\microscope-solid.png" />
-    <None Include="Icons\mobile-alt-solid.png" />
-    <None Include="Icons\newspaper-regular.png" />
-    <None Include="Icons\paint-brush-solid.png" />
-    <None Include="Icons\palette-solid.png" />
-    <None Include="Icons\passport-solid.png" />
-    <None Include="Icons\pencil-alt-solid.png" />
-    <None Include="Icons\percentage-solid.png" />
-    <None Include="Icons\photo-video-solid.png" />
-    <None Include="Icons\pills-solid.png" />
-    <None Include="Icons\pizza-slice-solid.png" />
-    <None Include="Icons\plane-solid.png" />
-    <None Include="Icons\plug-solid.png" />
-    <None Include="Icons\prescription-bottle-alt-solid.png" />
-    <None Include="Icons\react-brands.png" />
-    <None Include="Icons\robot-solid.png" />
-    <None Include="Icons\rocket-solid.png" />
-    <None Include="Icons\ruler-solid.png" />
-    <None Include="Icons\shapes-solid.png" />
-    <None Include="Icons\shield-virus-solid.png" />
-    <None Include="Icons\shuttle-van-solid.png" />
-    <None Include="Icons\sitemap-solid.png" />
-    <None Include="Icons\skull-crossbones-solid.png" />
-    <None Include="Icons\snowflake-regular.png" />
-    <None Include="Icons\soap-solid.png" />
-    <None Include="Icons\solar-panel-solid.png" />
-    <None Include="Icons\spider-solid.png" />
-    <None Include="Icons\splotch-solid.png" />
-    <None Include="Icons\spray-can-solid.png" />
-    <None Include="Icons\square-root-alt-solid.png" />
-    <None Include="Icons\stethoscope-solid.png" />
-    <None Include="Icons\swimmer-solid.png" />
-    <None Include="Icons\tablet-alt-solid.png" />
-    <None Include="Icons\teeth-open-solid.png" />
-    <None Include="Icons\temperature-high-solid.png" />
-    <None Include="Icons\theater-masks-solid.png" />
-    <None Include="Icons\tools-solid.png" />
-    <None Include="Icons\tooth-solid.png" />
-    <None Include="Icons\traffic-light-solid.png" />
-    <None Include="Icons\tree-solid.png" />
-    <None Include="Icons\tshirt-solid.png" />
-    <None Include="Icons\tv-solid.png" />
-    <None Include="Icons\utensils-solid.png" />
-    <None Include="Icons\vial-solid %281%29.png" />
-    <None Include="Icons\video-solid %281%29.png" />
-    <None Include="Icons\virus-solid.png" />
-    <None Include="Icons\wrench-solid.png" />
+    <None Include="obj\select_color.png" />
+    <None Include="obj\select_icon.png" />
+    <None Include="obj\Group 24.png" />
     <Content Include="Quicksand-Regular.ttf" />
     <Content Include="Righteous-Regular.ttf" />
   </ItemGroup>
